--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -28,35 +28,7 @@
     height: 250px;
 }
 
-
-
-
-#plan_location {
-    float: left;
-}
-#plan_title {
-    float: left;
-}
-#plan_time, #plan_day {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#create_plan_content input.textbox, .change_location_panel .textbox {
-    height:30px;
-    width:200px;
-}
-
-#invite_plan_left {
-    width: 48%;
-    float: left;
-}
-#invite_plan_right {
-    width: 48%;
-    float: left;
-    margin-left: 4%;
-}
-#plan_invite_wrapper {
-    height: 30px;
+.plan_page_content {
     width: 100%;
+    height: 100%;
 }
