--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -23,9 +23,16 @@
     padding-top:3px;
 }
 
+#plan_left, #plan_right {
+    height: 100%;
+    width: 4%;
+    display: inline-block;
+}
+
 #plan_page_wrapper {
-    width: 100%;
+    width: 96%;
     height: 250px;
+    display: inline-block;
 }
 
 .plan_page_content {
