--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -373,4 +373,10 @@ a{
     position:absolute;
     top:0px;
     left:0px;
+    text-align:center;
+    color:darkgray;
+}
+
+#using_location{
+    color:darkgray;
 }
