--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -382,6 +382,7 @@ a{
 .top_panel .top_links a:hover{
     background: -webkit-gradient(linear,left top,left bottom,from(lightgray),to(white));
     color:black;
+    height:100%;
 }
 
 .top_right_link{
