--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -380,14 +380,13 @@ a{
 }
 
 .top_panel .top_links a:hover{
-    background: -webkit-gradient(linear,left top,left bottom,from(lightgray),to(white));
     color:black;
     height:100%;
 }
 
 .top_right_link:hover{
-    height:100%;
-    display:inline-block;
+    background: -webkit-gradient(linear,left top,left bottom,from(lightgray),to(white));
+    color:black;
 }
 
 .top_right_link{
