--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -389,15 +389,24 @@ a{
     color:black;
 }
 
-.top_right_link{
+.top_right_link_outer{
     height:100%;
     display:inline-block;
+    position:relative;
+    top:-12px;
+    padding-right:5px;
+    padding-left:5px;
+}
+
+.top_right_link_inner{
+    position:relative;
+    top:10px;
 }
 
 #show_name{
     display:inline-block;
     color:white;
-    margin-right:360px;
+    margin-right:312px;
     margin-top:12px;
 }
 
