--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -384,7 +384,7 @@ a{
     height:100%;
 }
 
-.top_right_link:hover{
+.top_right_link_outer:hover{
     background: -webkit-gradient(linear,left top,left bottom,from(lightgray),to(white));
     color:black;
 }
