--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -86,7 +86,18 @@ a{
     margin-bottom: 10px;
     width:95%;
     margin-left:5px;
-    
+}
+
+.city_tab{
+    border:1px solid black;
+    height:100%;
+    padding: 5px 0px 5px;
+    color: navy;
+    background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EEE));
+    text-align:center;
+    margin-bottom: 10px;
+    width:95%;
+    margin-left:5px;
 }
 
 .selected_group {
