--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -23,7 +23,14 @@ a{
 .top_panel{
     height: 40px;
     width:100%;
+background: #333;
     background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
+background: -moz-linear-gradient(top,#333,#111);
+background: transparent	9;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333',endColorstr='#111');
+box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .inside_top_panel{
