--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -402,12 +402,11 @@ a{
 
 .top_right_link_outer{
     height:100%;
-    width:60px;
+    width:70px;
     display:inline-block;
     position:relative;
     top:-12px;
-    padding-right:5px;
-    padding-left:5px;
+    text-align: center;
 }
 
 .top_right_link_inner{
