--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -93,7 +93,7 @@ a{
     height:100%;
     padding: 5px 0px 5px;
     color: navy;
-    background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EEE));
+    background:-webkit-gradient(linear,left top,left bottom,from(#0C2),to(green));
     text-align:center;
     margin-bottom: 10px;
     width:95%;
