--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -96,7 +96,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     float:left;
     height:auto;
     background-color:white;
-    border: 1px solid black;
+    border: 1px solid #aaa;
     min-height: 50px;
     border-top-left-radius:10px;
 }
@@ -110,7 +110,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     float:left;
     height:auto;
     background-color:white;
-    border: 1px solid black;
+    border: 1px solid #aaa;
     border-top-right-radius: 10px;
     margin-left:50px;
 }
@@ -131,8 +131,8 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 .user_entry {
     width: 100%;
     height: 55px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border-top: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
     margin-top: 5px;
     text-align: center;
 }
@@ -171,7 +171,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     width: 48%;
     float: left;
     height: auto;
-    border: 1px solid black;
+    border: 1px solid #aaa;
     border-top-left-radius:10px;
     background-color: white;
 }
@@ -187,7 +187,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 .left_header{
     height: 50px; 
     width: 100%; 
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #aaa;
 }
 
 #followers_list {
@@ -201,7 +201,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     width: 48%;
     float: right;
     height: auto;
-    border: 1px solid black;
+    border: 1px solid #aaa;
     border-top-right-radius:10px;
     background-color:white;
     padding:10px;
@@ -214,7 +214,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     text-align:center;
     float:right;
     margin-top:8px;
-    border:1px solid black;
+    border:1px solid #aaa;
     padding-left:3px;
     padding-right:3px;
     background: -webkit-gradient(linear,left top,left bottom,from(#EEE),to(white));
@@ -238,7 +238,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 .profile_box{
     border-top-left-radius:10px;
     float:left;
-    border: 1px solid black;
+    border: 1px solid #aaa;
     margin-left:auto;
     margin-right:auto;
     height:auto;
