--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -9,6 +9,10 @@ body{
     margin:0px;
 }
 
+.border_gray{
+    border-color:#aaa;
+}
+
 a{
     color:white; text-decoration: none;
 }
@@ -56,7 +60,7 @@ a{
     height :1000px;
     text-align: center;
     margin-top:20px;
-    box-shadow: 0 0 5px #E1E1E1;
+    /*box-shadow: 0 0 5px #E1E1E1;*/
 }
 
 /* -------------- LEFT PANEL ---------------- */ 
