--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -272,6 +272,12 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     text-align:left;
 }
 
+.following_profile_body{
+    position:absolute;
+    top:0px;
+    right:0px;
+}
+
 .profile_body_text{
     width:100%;
 }
