--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -274,8 +274,14 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 
 .following_profile_body{
     position:absolute;
-    top:0px;
-    right:0px;
+    top:60px;
+    right:60px;
+    background-color:white;
+    height:auto;
+    width:50%;
+    border:1px solid gray;
+    padding:10px;
+    border-top-right-radius:10px;
 }
 
 .profile_body_text{
