--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -224,7 +224,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .suggested_active{
-    background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(lightgray));
+    background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EFF));
     color:black;
 }
 
