--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -7,10 +7,7 @@ body{
     font-family: helvetica;
     font-size: 15px;
     margin:0px;
-}
-
-.border_gray{
-    border: 1px solid #aaa;
+    border-color:border: 1px solid #aaa;
 }
 
 a{
@@ -65,7 +62,7 @@ a{
     text-align: center;
     background-color:white;
     padding-top:10px;
-    border:1px solid black;
+    border:1px solid;
     border-right:none;
     padding-bottom:10px;
 }
@@ -82,7 +79,7 @@ a{
 }
 
 .selectable_group {
-    border:1px solid black;
+    border:1px solid;
     height:100%;
     padding: 5px 0px 5px;
     color: navy;
@@ -96,7 +93,7 @@ a{
 .city_tab{
     background:darkgray;
     color: navy;
-    border:1px solid black;
+    border:1px solid;
     height:100%;
     padding: 5px 0px 5px;
     color: white;
@@ -164,8 +161,8 @@ a{
     width: 598px;
     height: 300px;
     display: none;
-    border-left:1px solid black;
-    border-right: 1px solid black;
+    border-left:1px solid;
+    border-right: 1px solid;
 }
 
 .data_container{
@@ -181,7 +178,7 @@ a{
     padding:4px;
     position:relative;
     right:5px;
-    border:1px solid black;
+    border:1px solid;
     background-color:#DC2F2F;
     color:white;
 }
@@ -207,8 +204,8 @@ a{
     width:100%;
     height:30px;
     text-align:center;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
     background-color:white;
 }
 
@@ -217,7 +214,7 @@ a{
     display: inline-block;
     width: 74px;
     height:100%;
-    border-left: 1px solid black;
+    border-left: 1px solid;
     background:-webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
     line-height: 30px;
 }
@@ -231,16 +228,16 @@ a{
     float:left;
     width:35px;
     height:100%;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 1px solid;
+    border-right: 1px solid;
     background:-webkit-gradient(linear,left top,left bottom,from(lightyellow),to(lightgray));
 }
 
 .right_day_arrow{
     display: inline-block;
     float:right;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 1px solid;
+    border-right: 1px solid;
     width:35px;
     height:100%;
     background:-webkit-gradient(linear,left top,left bottom,from(lightyellow),to(lightgray));
@@ -256,8 +253,8 @@ a{
     float:left;
     width:49%;
     height:600px;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 1px solid;
+    border-right: 1px solid;
     background-color: white;
     text-align: center;
 }
@@ -267,9 +264,9 @@ a{
     text-align:center;
     width:49%;
     height:300px;
-    border-right: 1px solid black;
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
+    border-right: 1px solid;
+    border-left: 1px solid;
+    border-bottom: 1px solid;
     background-color: white;
 }
 
@@ -279,8 +276,8 @@ a{
     float:right;
     width:49%;
     height:300px;
-    border-right: 1px solid black;
-    border-left: 1px solid black;
+    border-right: 1px solid;
+    border-left: 1px solid;
     background-color: white;
 }
 
@@ -296,8 +293,8 @@ a{
     background-color:white;
     color:navy;
     margin-top:10px;
-    border-top:1px solid black;
-    border-bottom: 1px solid black;
+    border-top:1px solid;
+    border-bottom: 1px solid;
     padding-top:10px;
     padding-bottom:10px;
 }
@@ -308,7 +305,7 @@ a{
 }
 
 #number_rank{
-    border: 1px solid black; 
+    border: 1px solid; 
     border-top:none;
     border-left: none; 
     float:left; width:15px; 
@@ -330,7 +327,7 @@ a{
     min-height: 80px;
     background-color:white;
     padding-top:10px;
-    border:1px solid black;
+    border:1px solid;
     border-left:none;
 }
 
@@ -349,8 +346,8 @@ a{
     width:100%;
     height:100%;
     margin:auto;
-    border-top:  1px solid black;
-    border-bottom:1px solid black;
+    border-top:  1px solid;
+    border-bottom:1px solid;
     color: black;
     padding-top:5px;    
     padding-bottom: 5px;
