--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -7,7 +7,7 @@ body{
     font-family: helvetica;
     font-size: 15px;
     margin:0px;
-    border-color:border: 1px solid #aaa;
+    border-color: #aaa;
 }
 
 a{
