--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -108,7 +108,7 @@ a{
 }
 
 .selected_group {
-    background:-webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#DFF));
+    background:-webkit-gradient(linear,left top,left bottom,from(#0C2),to(green));
     color: navy;
 }
 
