--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -81,8 +81,8 @@ a{
     border:1px solid;
     height:100%;
     padding: 5px 0px 5px;
-    color: navy;
-    background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EEE));
+    color: black;
+    background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EFF));
     text-align:center;
     margin-bottom: 10px;
     width:95%;
@@ -90,12 +90,11 @@ a{
 }
 
 .city_tab{
-    background:darkgray;
-    color: navy;
-    border:1px solid;
+    background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EFF));
+    border:1px solid lightgray;
     height:100%;
     padding: 5px 0px 5px;
-    color: white;
+    color: black;
     text-align:center;
     margin-bottom: 10px;
     width:75%;
