--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -65,7 +65,7 @@ a{
     text-align: center;
     background-color:white;
     padding-top:10px;
-    border:1px solid;
+    border:1px solid lightgray;
     border-right:none;
     padding-bottom:10px;
 }
@@ -82,7 +82,7 @@ a{
 }
 
 .selectable_group {
-    border:1px solid lightgray;
+    border:1px solid lightgray lightgray;
     height:100%;
     padding: 5px 0px 5px;
     color: black;
@@ -95,7 +95,7 @@ a{
 
 .city_tab{
     background:-webkit-gradient(linear,left top,left bottom,from(#EFF),to(#DDD));
-    border:1px solid lightgray;
+    border:1px solid lightgray lightgray;
     height:100%;
     padding: 5px 0px 5px;
     color: black;
@@ -163,8 +163,8 @@ a{
     width: 598px;
     height: 300px;
     display: none;
-    border-left:1px solid;
-    border-right: 1px solid;
+    border-left:1px solid lightgray;
+    border-right: 1px solid lightgray;
 }
 
 .data_container{
@@ -180,7 +180,7 @@ a{
     padding:4px;
     position:relative;
     right:5px;
-    border:1px solid;
+    border:1px solid lightgray;
     background-color:#DC2F2F;
     color:white;
 }
@@ -206,8 +206,8 @@ a{
     width:100%;
     height:30px;
     text-align:center;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
     background-color:white;
 }
 
@@ -216,7 +216,7 @@ a{
     display: inline-block;
     width: 74px;
     height:100%;
-    border-left: 1px solid;
+    border-left: 1px solid lightgray;
     background:-webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
     line-height: 30px;
 }
@@ -230,16 +230,16 @@ a{
     float:left;
     width:35px;
     height:100%;
-    border-left: 1px solid;
-    border-right: 1px solid;
+    border-left: 1px solid lightgray;
+    border-right: 1px solid lightgray;
     background:-webkit-gradient(linear,left top,left bottom,from(lightyellow),to(lightgray));
 }
 
 .right_day_arrow{
     display: inline-block;
     float:right;
-    border-left: 1px solid;
-    border-right: 1px solid;
+    border-left: 1px solid lightgray;
+    border-right: 1px solid lightgray;
     width:35px;
     height:100%;
     background:-webkit-gradient(linear,left top,left bottom,from(lightyellow),to(lightgray));
@@ -255,8 +255,8 @@ a{
     float:left;
     width:49%;
     height:600px;
-    border-left: 1px solid;
-    border-right: 1px solid;
+    border-left: 1px solid lightgray;
+    border-right: 1px solid lightgray;
     background-color: white;
     text-align: center;
 }
@@ -266,9 +266,9 @@ a{
     text-align:center;
     width:49%;
     height:300px;
-    border-right: 1px solid;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
+    border-right: 1px solid lightgray;
+    border-left: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
     background-color: white;
 }
 
@@ -278,8 +278,8 @@ a{
     float:right;
     width:49%;
     height:300px;
-    border-right: 1px solid;
-    border-left: 1px solid;
+    border-right: 1px solid lightgray;
+    border-left: 1px solid lightgray;
     background-color: white;
 }
 
@@ -295,8 +295,8 @@ a{
     background-color:white;
     color:navy;
     margin-top:10px;
-    border-top:1px solid;
-    border-bottom: 1px solid;
+    border-top:1px solid lightgray;
+    border-bottom: 1px solid lightgray;
     padding-top:10px;
     padding-bottom:10px;
 }
@@ -307,7 +307,7 @@ a{
 }
 
 #number_rank{
-    border: 1px solid; 
+    border: 1px solid lightgray; 
     border-top:none;
     border-left: none; 
     float:left; width:15px; 
@@ -329,7 +329,7 @@ a{
     min-height: 30px;
     background-color:white;
     padding-top:10px;
-    border:1px solid;
+    border:1px solid lightgray;
     border-left:none;
 }
 
@@ -348,8 +348,8 @@ a{
     width:100%;
     height:100%;
     margin:auto;
-    border-top:  1px solid;
-    border-bottom:1px solid;
+    border-top:  1px solid lightgray;
+    border-bottom:1px solid lightgray;
     color: black;
     padding-top:5px;    
     padding-bottom: 5px;
