--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -5,7 +5,7 @@
     height: auto;
     position: absolute;
     left: 50%;
-    margin-left: -300px;
+    margin-left: -275px;
     top: 50%;
     margin-top: -125px;
     background-color:#E0EFFF;
@@ -54,4 +54,13 @@
 #plan_invite_header {
     width: 100%;
     height: auto;
+}
+
+#plan_day {
+    margin-bottom: 5px;
+}
+
+#plan_event_select {
+    width: 150px;
+    float: left;
 }
