--- a/application/assets/css/in-field_labels.css
+++ b/application/assets/css/in-field_labels.css
@@ -1,7 +1,7 @@
 .in-field_block {
     position:relative;
-    height:auto;
-    width:auto;
+    height: 30px;
+    width: 200px;
 }
 
 .in-field_block label {
@@ -12,6 +12,6 @@
 }
 
 .in-field_block input {
-    width: 200px;
-    height: 30px;
+    width: 100%;
+    height: 100%;
 }
