--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -76,7 +76,7 @@ a{
 
 
 .selectable_group {
-    border:1px solid lightgray lightgray;
+    border:1px solid lightgray;
     height:100%;
     padding: 5px 0px 5px;
     color: black;
@@ -89,7 +89,7 @@ a{
 
 .city_tab{
     background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
-    border:1px solid lightgray lightgray;
+    border:1px solid lightgray;
     height:100%;
     padding: 5px 0px 5px;
     color: black;
