--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -80,7 +80,7 @@ a{
     height:100%;
     padding: 5px 0px 5px;
     color: black;
-    background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
+    background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
     text-align:center;
     margin-bottom: 10px;
     width:95%;
@@ -88,7 +88,7 @@ a{
 }
 
 .city_tab{
-    background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
+    background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
     border:1px solid lightgray;
     height:100%;
     padding: 5px 0px 5px;
@@ -350,8 +350,8 @@ a{
 }
 
 .selected_plan{
-    background-color:#aaccff;
-    color:black;
+    background:-webkit-gradient(linear,left top,left bottom,from(#EBBEF0),to(#C64AD4));
+    color:white;
 }
 
 .bottom_links{
