--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -195,7 +195,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 .selected_follower {
     background: -webkit-gradient(linear,left top,left bottom,from(#ddd),to(#eff));
 }
-#followers_content .right {
+#followers_content .right, #notifications_content .right {
     width: 48%;
     float: right;
     height: auto;
