--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -1,21 +1,16 @@
-#notifications_content > .left {
+#notifications_content {
     padding: 5px;
-    width: 48%;
+    width: 425px;
     height: auto;
     float: left;
     border: 1px solid black;
 }
 
-#notifications_content > .right {
-    padding: 5px;
-    width: 48%;
-    height: auto;
-    float: right;
-}
-
 #notifications_list {
-    width: 100%;
+    width: 425px;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .notification_entry {
@@ -51,7 +46,7 @@
 
 .notification_entry > .middle {
     float: left;
-    width: 50%;
+    width: 210px;
 }
 
 .notification_entry > .accept {
