--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -100,7 +100,7 @@ a{
 }
 
 .city_tab.city_active{
-    background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
+    background:-webkit-gradient(linear,left top,left bottom,from(#F8BA78),to(#F5952E));
     color:white;
 }
 
