--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -99,13 +99,13 @@ a{
     margin-left:5px;
 }
 
-.network_tab.city_active{
-    background:-webkit-gradient(linear,left top,left bottom,from(#F8BA78),to(#F5952E));
+.network_tab.network_active{
+    background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
     color:white;
 }
 
 .selected_group {
-    background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
+    background:-webkit-gradient(linear,left top,left bottom,from(#F8BA78),to(#F5952E));
     color: white;
 }
 
