--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -63,7 +63,7 @@
     margin-bottom: 5px;
 }
 
-#plan_event_select {
+#plan_event_select_wrapper {
     width: 150px;
     float: left;
     margin-left: 20px;
@@ -87,4 +87,16 @@
 .selected_event {
     background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
     color: white;
+}
+
+#plan_events_title {
+    width: 100%;
+    height: 2.5em;
+}
+
+#new_event_side {
+    float: right;
+    text-align: center;
+    width: 100px;
+    height: 100%;
 }
