--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -296,7 +296,7 @@ a{
 }
 
 .selected_location_tab{
-    background-color:beige;
+    background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(#F1FCD5));
     color:navy;
 }
 
