--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -65,6 +65,7 @@
 
 #plan_event_select_wrapper {
     width: 150px;
+    height: 160px;
     float: left;
     margin-left: 20px;
 }
@@ -91,7 +92,7 @@
 
 #plan_events_title {
     width: 100%;
-    height: 2.5em;
+    height: 40px;
 }
 
 #new_event_side {
