--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -288,6 +288,11 @@ a{
     background:-webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
 }
 
+.no_places_to_show{
+    font-style:italic; 
+    color:gray;
+}
+
 .location_tab{
     text-align:center;
     background-color:white;
