--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -285,7 +285,10 @@ a{
 
 /*------- CSS FOR BOTTOM SELECTABLE LOCATIONS------------ */
 .display_message{
-    background:-webkit-gradient(linear,left top,left bottom,from(#AAA),to(#EEE));
+    background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(white));
+    padding-top:10px;
+    padding-bottom:10px;
+    border-bottom:1px solid lightgray;
 }
 
 .no_places_to_show{
