--- a/application/css/home.css
+++ b/application/css/home.css
@@ -41,9 +41,8 @@ body{
 }
 
 .left_active{
-    background-color: #41499C;
+    background:-webkit-gradient(linear,left top,left bottom,from(#73B1EA),to(#02C));
     color:white;
-    border-right: 1px solid white;
 }
 
 .right_side{
@@ -83,7 +82,7 @@ body{
 }
 
 .tab_selected{
-    background-color:#C8E162;
+    background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
     color:navy;
 }
 
