--- a/application/css/home.css
+++ b/application/css/home.css
@@ -83,7 +83,7 @@ body{
 
 .tab_selected{
     background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
-    color:navy;
+    color:white;
 }
 
 .youtube_videos{
