--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -8,14 +8,14 @@
     margin-left: -275px;
     top: 50%;
     margin-top: -125px;
-    background-color:#E0EFFF;
+    background-color:#f5f5f5;
     padding: 5px;
-    border: 3px solid black;
+    
 }
 
 #create_plan_content .draggable_title_bar {
     height: 25px;
-    background-color:purple;
+    background-color:#555;
     color:white;
     font-size:18px;
     padding-left:10px;
