Edited application/assets/css/start_plan_modal.css via GitHub

--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -32,7 +32,7 @@
     height: 200px;
     width: 4%;
     float: left;
-    background-color: lightgrey;
+    background-color: #aaa;
 }
 
 #plan_page_wrapper {
