--- a/application/assets/css/divset.css
+++ b/application/assets/css/divset.css
@@ -1,7 +1,7 @@
 .divset {
     display:inline-block;
     padding: 5px 10px 6px;
-    background: #F2F2F2;
+    background: #fbfbfb;
     text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
     border-bottom: 1px solid rgba(0,0,0,0.25);position: relative;
     cursor: pointer;
