Edited application/assets/css/create_group_modal.css via GitHub

--- a/application/assets/css/create_group_modal.css
+++ b/application/assets/css/create_group_modal.css
@@ -15,6 +15,7 @@
 }
 
 .create_group_top_bar{
+height: 25px;
     background-color: #555;
 background: url( /application/assets/images/stripe_c.png);
     padding:3px;
