--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -294,6 +294,20 @@ a{
     padding-bottom:10px;
 }
 
+.number{
+    font-size:10px;
+    padding:3px;
+    background-color: white;
+    color: black;
+    position:absolute; 
+    top:0px; 
+    left:0px; 
+    height:auto;
+    width:auto;
+    border-right:1px solid gray; 
+    border-bottom:1px solid gray;
+}
+
 .selected_location_tab{
     background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(#F1FCD5));
     color:navy;
