--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -17,6 +17,8 @@
     height: 25px;
     background-color:#555;
 background: url( /application/assets/images/stripe_c.png);
+background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
+    background: -moz-linear-gradient(top,#333,#666);
     color:white;
     font-size:18px;
     padding-left:10px;
