--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -23,6 +23,16 @@ background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
     font-size:18px;
     padding-left:10px;
     padding-top:3px;
+
+/*--CSS3 Box Shadows--*/
+	-webkit-box-shadow: 0px 0px 20px #000;
+	-moz-box-shadow: 0px 0px 20px #000;
+	box-shadow: 0px 0px 20px #000;
+	/*--CSS3 Rounded Corners--*/
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+
 }
 
 #create_plan_content .draggable_title_bar .text {
