--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -353,12 +353,12 @@ a{
 
 .plan_content{
     width:95%;
-    height:100%;
+    height:auto;
     margin:auto;
     border: 1px solid lightgray;
     color: black;
     padding-top:5px;    
-    padding-bottom: 5px;
+    padding-bottom: 15px;
     background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
 }
 
