--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -29,14 +29,14 @@ a{
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-/*--CSS3 Box Shadows--*/
-	-webkit-box-shadow: 0px 0px 20px #000;
-	-moz-box-shadow: 0px 0px 20px #000;
-	box-shadow: 0px 0px 20px #000;
-	/*--CSS3 Rounded Corners--*/
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
+    /*--CSS3 Box Shadows--*/
+    -webkit-box-shadow: 0px 0px 20px #000;
+    -moz-box-shadow: 0px 0px 20px #000;
+    box-shadow: 0px 0px 20px #000;
+    /*--CSS3 Rounded Corners--*/
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
 }
 
 .inside_top_panel{
@@ -366,8 +366,9 @@ a{
     border: 1px solid lightgray;
     color: black;
     padding-top:5px;    
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
+    margin-bottom: 7px;
 }
 
 .selected_plan{
