fix to top-left and top-right vs just top

--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -33,9 +33,12 @@ background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
     padding-left:10px;
     padding-top:3px;
 /*--CSS3 Rounded Corners--*/
-	-webkit-border-radius-top: 10px;
-	-moz-border-radius-top: 10px;
-	border-top-radius: 10px;
+	-webkit-border-top-left-radius: 10px;
+	-moz-border-radius-top-left: 10px;
+	border-top-left-radius: 10px;
+	-webkit-border-top-right-radius: 10px;
+	-moz-border-radius-top-right: 10px;
+	border-top-right-radius: 10px;
 
 }
 
