--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -21,9 +21,10 @@ a{
 background: -moz-linear-gradient(top,#333,#666);
 background: transparent	9;
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333',endColorstr='#111');
-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
--moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
--webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    /*--CSS3 Box Shadows--*/
+    -webkit-box-shadow: 0px 0px 20px #000;
+    -moz-box-shadow: 0px 0px 20px #000;
+    box-shadow: 0px 0px 20px #000;
 
 }
 
