--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -11,16 +11,16 @@
 
 .notification_entry {
     width: 100%;
-    height: 60px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    height: 70px;
+    border-top: 1px solid #444;
+    border-bottom: 1px solid #444;
     margin-top: 5px;
     padding-top:5px;
     position: relative;
 }
 
 .notification_entry.unviewed {
-    background: -webkit-gradient(linear,left top,left bottom,from(lightBlue),to(#DFF));
+    background: -webkit-gradient(linear,left top,left bottom,from(#EED),to(#EEF));
 }
 
 .notification_entry > .left {
