--- a/application/assets/css/create_group_modal.css
+++ b/application/assets/css/create_group_modal.css
@@ -42,7 +42,7 @@
     color:gray;
 }
 
-.invite_wrapper {
+/*.invite_wrapper {
     width: 100%;
 }
 
@@ -55,7 +55,7 @@
     float: left;
     margin-left: 4%;
     width: 48%;
-}
+}*/
 
 #group_privacy_wrapper {
     text-align: center;
