--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -305,6 +305,16 @@ a{
     padding-bottom:10px;
 }
 
+.event_tab{
+    position:relative;
+    text-align:center;
+    background-color:white;
+    color:navy;
+    border-bottom: 1px solid lightgray;
+    padding-top:10px;
+    padding-bottom:10px;
+}
+
 .number{
     font-size:10px;
     padding:3px;
