--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -390,7 +390,7 @@ a{
 }
 
 .selected_plan{
-    background:-webkit-gradient(linear,left top,left bottom,from(#EBBEF0),to(#C64AD4));
+    background:-webkit-gradient(linear,left top,left bottom,from(#805EBA),to(#390D86));
     color:white;
 }
 
