--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -151,6 +151,7 @@ a{
     height:85px;
     background:-webkit-gradient(linear,left top,left bottom,from(#DDD),to(#EEE));
     color:navy;
+    display: none;
 }
 
 .data_container_wrapper {
