--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -169,6 +169,11 @@ a{
     display: none;
 }
 
+.data_box_top_bar{
+    width:100%;
+    height:50px;
+}
+
 .delete_plan{
     float:left;
     text-align: center;    
