--- a/application/assets/css/invite_modal.css
+++ b/application/assets/css/invite_modal.css
@@ -1,11 +1,13 @@
 #invite_modal {
     display: none;
     position: absolute;
-    
+
     padding: 5px;
     width: auto;
     height: auto;
     background-color: lightgray;
+    left: 50%;
+    top: 50%;
 }
 
 #invite_modal .title_bar {
