--- a/application/assets/css/invite_modal.css
+++ b/application/assets/css/invite_modal.css
@@ -20,6 +20,7 @@
     width: 200px;
     height: 100px;
     overflow: auto;
+    float: left;
 }
 
 #invite_groups_list {
@@ -29,5 +30,5 @@
 }
 
 #invite_divset {
-    
+    width: auto;
 }
