--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -2,47 +2,11 @@
 #create_plan_content {
     display: none;
     width: 600px;
-    height: auto;
-    position: absolute;
-    left: 50%;
-    margin-left: -275px;
-    top: 50%;
+    margin-left: -300px;
     margin-top: -125px;
-    background-color:#efefef;
-    padding: 5px;
-
-/*--CSS3 Box Shadows--*/
-	-webkit-box-shadow: 0px 0px 20px #000;
-	-moz-box-shadow: 0px 0px 20px #000;
-	box-shadow: 0px 0px 20px #000;
-	/*--CSS3 Rounded Corners--*/
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-    
 }
 
-#create_plan_content .draggable_title_bar {
-    height: 25px;
-    background-color:#555;
-background: url( /application/assets/images/stripe_c.png);
-background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
-    background: -moz-linear-gradient(top,#333,#666);
-    color:white;
-    font-size:18px;
-    padding-left:10px;
-    padding-top:3px;
-/*--CSS3 Rounded Corners--*/
-	-webkit-border-top-left-radius: 10px;
-	-moz-border-radius-top-left: 10px;
-	border-top-left-radius: 10px;
-	-webkit-border-top-right-radius: 10px;
-	-moz-border-radius-top-right: 10px;
-	border-top-right-radius: 10px;
-
-}
-
-#create_plan_content .draggable_title_bar .text {
+#create_plan_content .title_bar .text {
     float: left;
     height: 100%;
     width: auto;
@@ -64,10 +28,6 @@ background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
 .plan_page_content {
     width: 100%;
     height: 100%;
-}
-
-#plan_location {
-
 }
 
 #plan_invite_header {
@@ -118,8 +78,4 @@ background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
     text-align: center;
     width: 300px;
     height: 100%;
-}
-
-#start_event_content {
-    
 }
