--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -98,6 +98,7 @@ a{
     margin-bottom: 10px;
     width:95%;
     margin-left:5px;
+    text-weight:bold;
 }
 
 .network_tab.network_active{
@@ -108,6 +109,7 @@ a{
 .selected_group {
     background:-webkit-gradient(linear,left top,left bottom,from(#F8BA78),to(#F5952E));
     color: white;
+    font-weight:bold;
 }
 
 /* ---------------- CENTER PANEL ---------------- */
