--- a/application/assets/css/invite_modal.css
+++ b/application/assets/css/invite_modal.css
@@ -4,6 +4,10 @@
     top: 30%;
 }
 
+#invite_modal .title {
+    width: 100%;
+    text-align: center;
+}
 
 #invite_followers_list_wrapper {
     width: 300px;
