--- a/application/assets/css/invite_modal.css
+++ b/application/assets/css/invite_modal.css
@@ -9,14 +9,15 @@
     text-align: center;
 }
 
+#invite_modal .header {
+    width: 100%;
+    margin-bottom: 5px;
+}
+
 #invite_followers_list_wrapper {
     width: 300px;
     float: left;
     margin-right: 30px;
-}
-
-#invite_followers_list_wrapper .header {
-    width: 100%;
 }
 
 #invite_followers_list {
@@ -31,6 +32,7 @@
 
 #invite_groups_list_wrapper .header {
     width: 100%;
+    margin-bottom: 5px;
 }
 
 #invite_groups_list {
@@ -39,10 +41,6 @@
 }
 
 #search_in_school_wrapper {
-    width: 100%;
-}
-
-#search_in_school_wrapper .header {
     width: 100%;
 }
 
