--- a/application/assets/css/modal.css
+++ b/application/assets/css/modal.css
@@ -37,3 +37,15 @@
     -moz-border-radius-top-right: 10px;
     border-top-right-radius: 10px;
 }
+
+    .modalBackground
+        {
+            position: absolute;
+            z-index: 100;
+            top: 0px;
+            left: 0px;
+            background-color: #000;
+            filter: alpha(opacity=60);
+            -moz-opacity: 0.6;
+            opacity: 0.6;
+        }
