--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -465,7 +465,7 @@ a{
 
 .top_right_link_outer{
     height:100%;
-    width:70px;
+    width:86px;
     display:inline-block;
     position:relative;
     top:-12px;
@@ -480,7 +480,11 @@ a{
 #show_name{
     display:inline-block;
     color:white;
-    margin-right:270px;
+    margin-right:100px;
     margin-top:12px;
+}
+
+#create_plan{
+    
 }
 
