--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -54,6 +54,11 @@ a{
     text-align: center;
 }
 
+.top_right_link_outer:hover{
+    background: -webkit-gradient(linear,left top,left bottom,from(darkGray),to(gray));
+    color:lightgray;
+}
+
 .top_right_link_inner{
     position:relative;
     top:10px;
