--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -79,8 +79,9 @@
 }
 
 #new_event_side {
-    float: right;
+    float: left;
     text-align: center;
     width: 300px;
-    height: 100%;
+    height: 160px;
+    margin-left: 80px;
 }
