--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -49,8 +49,9 @@
 }
 
 #plan_submit_wrapper {
-    width: 100%;
+    width: 300px;
     text-align: center;
+    float: left
 }
 
 #create_plan_content h3 {
@@ -82,6 +83,6 @@
     float: left;
     text-align: center;
     width: 300px;
-    height: 160px;
+    height: 120px;
     margin-left: 80px;
 }
