--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -28,6 +28,7 @@
 .plan_page_content {
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 #plan_invite_header {
@@ -46,12 +47,6 @@
     margin-left: 20px;
     overflow: auto;
     margin-bottom: 10px;
-}
-
-#plan_submit_wrapper {
-    width: 300px;
-    text-align: center;
-    float: left
 }
 
 #create_plan_content h3 {
@@ -83,6 +78,6 @@
     float: left;
     text-align: center;
     width: 300px;
-    height: 120px;
+    height: auto;
     margin-left: 80px;
 }
