command center padding

--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -48,7 +48,7 @@ a{
 
 .top_right_link_outer{
     height:100%;
-    width:86px;
+    padding:5px;
     display:inline-block;
     position:relative;
     top:-12px;
