--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -418,7 +418,7 @@ a{
     height:40px;
     background-color: black;
     opacity: .4;
-    text-align:center;        
+    text-align:left;        
 }
 
 #group_select_type{
