--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -427,6 +427,15 @@ a{
     top: 10px;
 }
 
+.bottom_link_outer{
+    height:100%;
+    width:86px;
+    display:inline-block;
+    position:relative;
+    top:-12px;
+    text-align: center;
+}
+
 #group_select_type{
     height:auto;
     width:auto;
